# merge-conflict-models

./: .gitignore  README.md  basiccreator.cpp  basiccreator.h  codeelement.cpp  codeelement.h  constrained_random.cpp  constrained_random.h  design.md  editcounter.cpp  editcounter.h  editmutator.cpp  editmutator.h  file_size_hist.cpp  interfaces.cpp  interfaces.h  long_files_1.cpp  meson.build  projectfile.cpp  projectfile.h  projectid.cpp  projectid.h  projectstate.cpp  projectstate.h
